v0.2.0 (15th September 2008)
- API INCOMPATIBLE CHANGE: render_file() is no longer supported. 
  - Use the output parameter of the constructor instead
  - In versions before this, we automatically rendered to a StringIO object. This kept
    things simple, but isn't great for scalability. Better to give the user the option
    of bypassing memory and rendering direct to disk.
  - Particuarly useful in rails apps to avoid the memory footprint of mongrels 
    blowing out

v0.1.5 (Unreleased)
- Fix text wrapping that crosses page boundaries
  - when a new page is started as a result of a text() call, the text
    should continue at the top of the next page, not the y value the
    text started at

v0.1.4 (Unreleased)
- Wrapper#font_size now accepts a block for temporary font size changes
- Allow the page size to be changed when starting a new page
- Added support for manually setting table column widths
  - prevents the column widths from growing or shrinking automatically
- Deprecated Table#table_options in favour of passing options to Table#new
  - Thanks to Zubin Henner for the suggestion
- Deprecated Table#header_options and Table#headers= in favour of a new method
  that can be used to specify both the content and options of the header row.
  - Thanks to Zubin Henner for the suggestion

v0.1.3 (24th July 2008)
- Require the gem version of cairo
  - >= 1.5. However I recommend >= 1.6.3 to avoid FATAL error under 1.8.7
- Removed Wrapper#scale. Was causing more trouble than it's worth. May re-implement later.
- Allow the render functions to be called multiple times
- Added Wrapper#finished?
- rename Wrapper#render_to_file to Wrapper#render_file.
  - old method still exists with a deprecation warning
- add :rotate option to Wrapper#image (thanks Lourens Naudé)
- borrowed some convenience methods for co-ordinate manipulation from Prawn
- Wrapper#translate now resets the point to 0,0 before yielding

v0.1.1 (Unreleased)